--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/react": "^19.0.10",
     "autoprefixer": "^10.4.20",
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "^9",
